components/ui/toast/toast.module.css
.toast {
  --toast-radius: 14px;
  --toast-max-width: 70vh;
  --toast-padding: 20px;
  --toast-max-height: 30vh;

  display: flex;
  flex-direction: column;
  position: fixed;
  z-index: var(--z-index-modal);
  bottom: 24px;
  right: 24px;
  overflow: hidden;
  width: calc(100% - 32px);
  max-width: var(--toast-max-width);
  max-height: var(--toast-max-height);
  padding: var(--toast-padding);
  background: var(--primary);
  border-radius: var(--toast-radius);
  color: var(--white);
}

html[data-dark-mode='true'] .toast {
  background: var(--primary-700);
}

.toast__content {
  scrollbar-width: thin;
  scrollbar-color: var(--primary-600) var(--primary-700);
  overflow-y: auto;
  max-height: calc(var(--toast-max-height) - 10px);
  padding-right: 8px;
}

/* Botón close */
.toast__close {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 10px;
  right: 10px;
  aspect-ratio: 1;
  width: 34px;
  height: auto;
  transition: background-color 120ms ease-in-out;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 50%;
  color: var(--white);
}


.toast__close:hover {
  background-color: var(--primary-600);
}

/* Responsive */

@media (max-width: 768px) {

  .toast {
    --toast-width: 100%;
    bottom: 16px;
    left: 16px;
    right: 16px;
  }
}

